# oxcovid19db

./: .gitignore  CHANGES.txt  example.py  readme.md  readme.txt  requirements.txt  setup.cfg  setup.py
oxcovid19db/: __init__.py  columnlists.py  connect.py  requirements.txt  tools.py
src/oxcovid19db/: columnlists.py  connect.py  tools.py
