[metadata]
name = OxCOVID19
version = 0.0.1
author = John Harvey
author_email = john.harvey.math@gmail.com
description = For interacting with the OxCOVID19 Database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/p
project_urls =
    Project Home = http://covid19.oii.ox.ac.uk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
